# bazel_rules

./: .gitignore  LICENSE  README.md  WORKSPACE  deps.bzl
build_inspector/: collect_deps.bzl
build_inspector/example/: BUILD  dynamic_lib.cpp  dynamic_lib.h  example.cpp  generic_lib.cpp  generic_lib.h  static_lib.cpp
build_inspector/mapfile/: mapfile.bzl
build_inspector/symbols/: BUILD  symbol_report.py  symbols.bzl
cc_compile/: cc_rules.bzl  compile.bzl  link.bzl
ceres_solver/: ceres_solver.bazel
cppcheck/: README.md  cppcheck.bazel
doxygen/: BUILD  Doxyfile.template  doxygen.bzl  run_doxygen.py  serve.py
doxygen/test/: BUILD  bar.cpp  bar.h  foo.cpp  foo.h  mainpage.md
doxygen_awesome/: doxygen_awesome.bazel
eigen/: eigen.bazel
nanoflann/: nanoflann.bazel
sophus/: sophus.bazel
stb_image/: BUILD
toolchains/cc/: toolchain.bzl
toolchains/cc/arm_none/: BUILD
